--- a/rapport.tex
+++ b/rapport.tex
@@ -113,7 +113,7 @@ La possibilité d’accès à ses voisins sera contrôlée par la relation de la
 \section{Bases du jeu}
 
 
-\includegraphics[scale=0.5]{Capture d'écran_20230112_214222.png}
+\includegraphics[scale=0.5]{1.png}
 
 
 
