--- a/rapport.tex
+++ b/rapport.tex
@@ -71,7 +71,10 @@
 
 \newpage
 
-\tableofcontents
+
+
+\tableofcontents 
+
 
 \newpage
 
@@ -97,7 +100,22 @@ La possibilité d’accès à ses voisins sera contrôlée par la relation de la
 
 \section{Implémentation}
 
+Le monde étant inacessible par d’autre document autre que \textcolor{green}{\textit{world.h}}. On a utilisé les fonctions
+ \lstinline|void world_set(struct world_t* b, unsigned int idx, enum color_t c)| et \lstinline|void world_set_sort(struct world_t* b, unsigned int idx, enum sort_t c)|
+ pour donner à un monde initialisé vide des positions pour chacun des pions. Le nombre des pions étant \textcolor{purple}{\textsc{height}}.  
 
+Il existe deux types de victorys. La victory est dite simple si le joueur atteint une des positions de départ de l’autre joueur
+ et complexe si le joueur les atteint tous. En tous cas, on aura besoin de garder la liste de positions de départ des deux joueurs 
+ et leurs faire rentrer en paramètre pour pouvoir comparer avec les positions actuelles de l’adversaire. En plus, pour la comparaison on 
+ pourra utiliser la fonction place\_visited. 
+
+Le jeu s’arrête si on atteint une victory, le choix du type étant aléatoire pendant la partie, ou si on atteint \textcolor{purple}{\textsc{max\_turns}}. 
+
+Avant d’obtenir la boucle de jeu finale il faudra définir des fonctions qui font des choix aléatoires sur tous les paramètres du jeu. 
+Le choix du pion sera fait par \lstinline|void choose_random_piece_belonging_to(struct game_t* game) |qui retournera un indice. La fonction \lstinline| unsigned int choose_random_move_for_piece(struct game_t game)| va chercher entre les mouvements disponibles pour cet indice et va ensuite choisir un indice auquel le pion va bouger. La fonction \lstinline|void move_piece(struct game_t game, unsigned int dst)| agira sur le monde et échangera l’état de la case à l’indice initial avec celle de l’indice du mouvement. On choisira ainsi aléatoirement le premier joueur à commencer. 
+
+
+$\newline$
 
 
 
@@ -213,8 +231,11 @@ void add_position(struct set* p ,unsigned int place ){
     p->taille+=1;
 }
 \end{lstlisting}
-\section{Mobilités des pièces}
-\subsection{Mobilité d'un pion \textit{PAWN}}
+
+\subsection{mouvements des pièces}
+
+
+\subsubsection{Mobilité d'un pion \textit{PAWN}}
 Pour stocker les mouvements on fera appel à la structure set . Les mouvement possibles dans la version de bases sont :  
 
     \textbf{\textcolor{magenta}{Déplacement simple}} : pour les relever il suffit d’utiliser la fonction get\_neighbors pour un indice donné . Ils seront stockés par la fonction \lstinline|void simple_moves( struct game_t game, struct set* sm );|
@@ -243,7 +264,7 @@ $\newline$
 $\newline$
 
 Ses fonctions prennent comme paramètre additionnel un set. Il servira comme espace de stockage pour chacune des fonctions au lieu de retourner l’set à la fin de chacune . En plus, la fonction \lstinline|void available_movements(struct game_t game, struct set* am) |fera appel à toutes les fonctions de mouvement citée au-dessus et l’set rentrer comme paramètre dans cette fonction sera le même rentrer dans tous les fonctions pour qu’on puisse stocker tous les mouvements dans un même set.  
-\subsection{Mobilité des autre pièces \textit{TOWER} et \textit{ELEPHANT }}
+\subsubsection{Mobilité des autre pièces \textit{TOWER} et \textit{ELEPHANT }}
 
 $\newline$
 
@@ -262,7 +283,7 @@ $\newline$
 \end{center}
 
 
-\subsection{Possibilité de capture et les tentatives d'évasion}
+\subsubsection{Possibilité de capture et les tentatives d'évasion}
 $\newline$
 Les mobilités des pièces ont un rôle très important dans notre jeu, mais ceci rend le jeu un peu statique où le nombre de pièces reste le même du début jusqu'à la fin. Donc on va améliorer ça en ajoutant d'une part des captures simples qui permettent par exemple dans un jeu d'echecs de retirer les pièces les plus fortes de l'adversaire, affaiblissant ainsi sa position et peut également permettre de créer des opportunités et des ouvertures pour les pièces restantes, d'autre part la possibilité de s'évader pour une pièces prisonnière. 
 
@@ -313,23 +334,6 @@ Mais pour ajouter une nouvelle dimension au jeu on implémente la posibilité d'
 \textbf{\textcolor{magenta}{Tentatives d'évasion}} : Si une pièce est capturée, elle a la possibilité de tenter de s'échapper. Cependant, cette évasion n'est possible que si la case où elle a été capturée est vide. La réussite de cette évasion est aléatoire, avec une chance de 50$\%$ de réussir. Si l'évasion échoue, la pièce reste capturée et le plateau de jeu reste inchangé.
 
 $\newline$
-
-
-\section{Boucle de jeu}
-Le monde étant inacessible par d’autre document autre que \textcolor{green}{\textit{world.h}}. On a utilisé les fonctions
- \lstinline|void world_set(struct world_t* b, unsigned int idx, enum color_t c)| et \lstinline|void world_set_sort(struct world_t* b, unsigned int idx, enum sort_t c)|
- pour donner à un monde initialisé vide des positions pour chacun des pions. Le nombre des pions étant \textcolor{purple}{\textsc{height}}.  
-
-Il existe deux types de victorys. La victory est dite simple si le joueur atteint une des positions de départ de l’autre joueur
- et complexe si le joueur les atteint tous. En tous cas, on aura besoin de garder la liste de positions de départ des deux joueurs 
- et leurs faire rentrer en paramètre pour pouvoir comparer avec les positions actuelles de l’adversaire. En plus, pour la comparaison on 
- pourra utiliser la fonction place\_visited. 
-
-Le jeu s’arrête si on atteint une victory, le choix du type étant aléatoire pendant la partie, ou si on atteint \textcolor{purple}{\textsc{max\_turns}}. 
-
-Avant d’obtenir la boucle de jeu finale il faudra définir des fonctions qui font des choix aléatoires sur tous les paramètres du jeu. 
-Le choix du pion sera fait par \lstinline|void choose_random_piece_belonging_to(struct game_t* game) |qui retournera un indice. La fonction \lstinline| unsigned int choose_random_move_for_piece(struct game_t game)| va chercher entre les mouvements disponibles pour cet indice et va ensuite choisir un indice auquel le pion va bouger. La fonction \lstinline|void move_piece(struct game_t game, unsigned int dst)| agira sur le monde et échangera l’état de la case à l’indice initial avec celle de l’indice du mouvement. On choisira ainsi aléatoirement le premier joueur à commencer. 
-
 
 
 \section{Configuration de compilation et exécution}
