--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -260,9 +260,8 @@ $\newline$
 \end{center}
 
 La fonction multiple$\_$jumps utilise une récursion qui augmente sa complexité de manière exponentielle, cependant elle
-utilise aussi une fonction simple$\_$jumps qui elle est de complexité constante. Ce qui donne une complexité globale de
-la fonction multiple$\_$jumps qui est exponentielle avec une constante dépendant de la fonction simple$\_$jumps sachant que
- les autres fonctions utilisées sont de complèxité constante.
+utilise aussi une fonction simple$\_$jumps qui elle est de complexité constante et sachant que les autres fonctions utilisées sont de complèxité constante.
+
 
 $\newline$
 
