--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -337,7 +337,7 @@ $\newline$
 $\newline$
 
 \begin{center}
-  \includegraphics[scale=0.5]{Dessin sans titre.jpg}
+  \includegraphics[scale=0.6]{diag.png}
 \end{center}
 
 \section{Configuration de compilation et exécution}
