--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -363,6 +363,10 @@ Il est important de noter que getopt() modifie l'ordre des éléments dans argv 
 
 
 \section{Conclusion}
+Le makefile et la configuration du getopt ont donné plus de contrôle sur l`exécution du jeu et sa configuration. Par contre, l`abstraction était un obstacle ,
+puisqu`on se projettent directement dans une grille à 2D alors que c'est une implémentation spécifique. Ensuite , la construction de sujet 
+nous a permis de remonter à cette abstraction pas à pas. En plus, on a appris à gérer les structures et les utiliser pour nous simplifier les programmes . Finalement, le cheminement 
+des objectifs nous ont permis de s'améliorer en programmation et à mieux gérer la mémoire en language C assez délicat.  
 
 
 \end{document}
