--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -98,7 +98,7 @@ la récursivité et les algorithmes de recherche. L'un des principaux défis est
     chaque type de pièce, ainsi que de prendre en compte les situations de pat et de mat.
 
 
-\subsection{Manusba}
+\subsection{Description générale su jeu}
 
 $\hspace*{0.7cm}$Pour jouer une partie, il faut que le plateau de jeu soit défini au préalable. Le plateau de jeu \textit{board}  est 
 le binôme monde et relation. 
@@ -234,7 +234,7 @@ manipulations : lecture et écriture , comme le jeu a plusieurs collections à f
 collection des mouvement possibles  ... . 
 
 
-\subsection{mouvements des pièces}
+\subsection{Mouvements des pièces}
 
 
 \subsubsection{Mobilité d'un pion \textit{PAWN}}
